# api

./: .gitignore  main.py  pyproject.toml  sonar-project.properties  test.compose.yml  test.dockerfile  tox.ini
.github/workflows/: test.yml
auth/: auth.py  user_auth.py
crud/: task.py  user.py
db/: create_database.py
models/: task.py  user.py
routers/: auth.py  task.py  user.py
schemas/: task.py  user.py
tests/crud/: test_task.py  test_user.py
tests/routers/: test_task.py  test_user.py
tests/services/: test_user_service.py
